Fix index header overlaping with images

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -119,9 +119,13 @@ button:hover span:nth-child(4) {
     justify-content: flex-end;
     position: relative;
     width: 100%;
-    height: 500px;
     color: white;
-}   
+}
+
+.content-mainArtist img {
+    height: 500px;
+    object-fit: cover;
+}
 
 .infoMainArtist{
     position: absolute;
